--- a/css/NewsDetail.css
+++ b/css/NewsDetail.css
@@ -155,10 +155,10 @@ body {
 
 .top-area-content .content-menu{
 	width: 15%;
-	margin-top: 20px;
+	margin-top: 40px;
 }
 .content-menu .big-menu {
-	padding-left: 6%;
+	padding-left: 10px;
 	box-sizing: border-box;
 }
 
