--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -412,11 +412,11 @@ body {
 }
 
 .bottom-area-content .bottom-txt{
-	width: 764px;
+	width: 935px;
 	color: #FFFFFF;
 	position: absolute;
 	top: 32px;
-	left: 250px;
+	left: 80px;
 }
 .bottom-txt .banner-swiper{
 	margin-top: 50px;
@@ -443,16 +443,17 @@ body {
 }
 
 .bottom-Article .bottom-img{
-	width: 180px;
-	height: 180px;
+	width: 340px;
+	height: 260px;
 	border-radius: 15px;
 	background-color: #E94F25;
 	float: left;
+	overflow: hidden;
 }
-.bottom-Article .bottom-img img{
-	width: 80px;
-	padding-top: 80px;
-	padding-left: 20px;
+.bottom-Article .bottom-img>img,
+.bottom-Article .bottom-img>video{
+	width: 340px;
+	padding-top: 35px;
 	box-sizing: border-box;
 }
 /*底部部分结束*/
