--- a/css/home.css
+++ b/css/home.css
@@ -303,6 +303,7 @@ body {
 .banner-content .banner-video{
 	width: 100%;
 	height: 310px;
+	position: relative;
 	/*background-color: pink;*/
 }
 
@@ -324,14 +325,14 @@ body {
 	height: 310px;
 }
 
-.banner-content .banner-span{
+.banner-video .banner-span{
 	position: absolute;
-	top: 300px;
-	left: -30px;
-	width: 26%;
+	top: 280px;
+	left: -455px!important;
+	
 }
 
-.banner .banner-span span {
+.banner-video .banner-span span {
 	margin-right: 10px;
 }
 
