--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -59,12 +59,20 @@ body {
 /*logo搜索开始*/
 
 .loss {
+	width: 1100px;
 	height: 68px;
 	position: absolute;
 	top: 0px;
-	left: 0px;
-	padding: 0px 2%;
+	left: 50%;
+	margin-left: -550px;
+	padding: 0px 20px;
 	box-sizing: border-box;
+	border: 5px solid #E94F25;
+	border-width: 5px 5px 0px 5px;
+	position: fixed;
+	z-index: 1000;
+	background-color: #FFFFFF;
+	box-shadow:0px 15px 10px -15px #ccc;
 }
 
 .logo {
