--- a/css/NewsDetail.css
+++ b/css/NewsDetail.css
@@ -41,12 +41,10 @@ body {
 }
 
 .box {
-	position: relative;
 	width: 100%;
-	height: 2000px;
-	z-index: 50;
-	overflow: hidden;
 	min-width: 953px;
+	position: relative;
+	z-index: 50;
 }
 
 .lo-ss {
@@ -64,7 +62,10 @@ body {
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
 	border-width: 5px 5px 0px 5px;
-	
+	position: fixed;
+	z-index: 1000;
+	background-color: #FFFFFF;
+	box-shadow:0px 15px 10px -15px #ccc;
 }
 
 .logo {
@@ -142,7 +143,7 @@ body {
 
 /*顶部标题开始*/
 .top-area-content {
-	height: 1200px;
+	height: auto;
 	position: absolute;
 	top: 60px;
 	left: 50%;
@@ -152,10 +153,24 @@ body {
 	border: 5px solid #E94F25;
 	border-width: 0px 5px 5px 5px;
 }
+.top-area-content .bgceng{
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+}
+.top-area-content .bgceng img{
+	width: 942px;
+	position: absolute;
+	top: 100px;
+	right: 0px;
+}
 
 .top-area-content .content-menu{
 	width: 15%;
 	margin-top: 40px;
+	position: fixed;
+	z-index: 1000;
 }
 .content-menu .big-menu {
 	padding-left: 10px;
@@ -188,56 +203,41 @@ body {
 	left: -15px;
 }
 .top-area-content .top-content{
+	height: 100%;
 	width: 85%;
 	position: relative;
+	margin-top: 150px;
 }
 
-.top-area-content .bgceng{
-	width: 100%;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-}
-.top-area-content .bgceng img{
-	width: 942px;
-	position: absolute;
-	top: 100px;
-	right: 0px;
-}
-.top-area-content .top-content .bottom-content1{
-	position: absolute;
-	top: 250px;
-	left: 165px;
+.top-area-content .top-content .alldiv{
+	width: 550px;
+	margin: 10px 0px;
+	margin-top: 50px;
+	margin-left: 300px;
 	line-height: 1.5em;
-	
+	font-weight: 700;
 	text-align: justify;
     text-justify: inter-ideograph;/*IE*/
-}
-.alldiv{
-	width: 636px;
-	margin: 10px 0px;
 }
 .alldiv .titlep{
 	font-size: 26px;
 	color: #283452;
 	line-height: 30px;
 	letter-spacing:2px;
-	text-indent:0;
-	font-weight: 700;
+	
 }
-.alldiv p{
+.alldiv .titley{
+	font-size: 20px;
+	color: #283452;
+	line-height: 30px;
+	letter-spacing:1px;
+}
+
+.top-content-wz{
+	margin-left: 300px;
+	width: 650px;
 	text-indent: 2em;
 	text-align: justify;
     text-justify: inter-ideograph;/*IE*/
-}
-.alldiv p:nth-of-type(3),
-.alldiv p:nth-of-type(4){
-	font-size: 16px;
-	letter-spacing:0px;
-	line-height: 20px;
-	font-weight: 600;
-}
-.alldiv p:nth-of-type(4){
-	margin-bottom: 20px;
 }
 /*顶部标题结束*/
