--- a/css/NewsInfo.css
+++ b/css/NewsInfo.css
@@ -41,12 +41,10 @@ body {
 }
 
 .box {
-	position: relative;
 	width: 100%;
-	height: 2000px;
-	z-index: 50;
-	overflow: hidden;
 	min-width: 953px;
+	position: relative;
+	z-index: 50;
 }
 
 .lo-ss {
@@ -64,7 +62,10 @@ body {
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
 	border-width: 5px 5px 0px 5px;
-	
+	position: fixed;
+	z-index: 1000;
+	background-color: #FFFFFF;
+	box-shadow:0px 15px 10px -15px #ccc;
 }
 
 .logo {
@@ -142,7 +143,7 @@ body {
 
 /*顶部标题开始*/
 .top-area-content {
-	height: 1400px;
+	height: auto;
 	position: absolute;
 	top: 60px;
 	left: 50%;
@@ -152,33 +153,31 @@ body {
 	border: 5px solid #E94F25;
 	border-width: 0px 5px 5px 5px;
 }
-.top-area-content .bgceng {
-	height: 700px;
-	width: 935px;
+.top-area-content .bgceng{
+	width: 100%;
 	position: absolute;
-	top: 40px;
+	top: 0px;
+	right: 0px;
+}
+.top-area-content .bgceng img{
+	width: 942px;
+	position: absolute;
+	top: 100px;
 	right: 0px;
 }
 
-.top-area-content .bgceng img {
-	width: 957px;
-}
-.top-area-content>div {
-	float: left;
-	margin-right: 2%;
-}
-
-.top-area-content .content-menu {
+.top-area-content .content-menu{
+	width: 15%;
 	margin-top: 40px;
-	width: 25%;
+	position: fixed;
+	z-index: 1000;
 }
-
 .content-menu .big-menu {
 	padding-left: 10px;
 	box-sizing: border-box;
 }
 
-.content-menu .big-menu li{
+.content-menu .big-menu li {
 	width: 170px;
 	color: #888888;;
 	margin-bottom: 10px;
@@ -204,16 +203,12 @@ body {
 	left: -15px;
 }
 .top-area-content .top-content{
-	position: absolute;
-	top: 70px;
-	right: 16%;
+	margin-left: 16%;
 }
 
 .top-area-content .top-content .firstul{
 	width: 636px;
-	height: 800px;
 	margin: 10px 0px;
-	overflow: hidden;
 }
 .top-content .firstul ul>li{
 	width: 47%;
