--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -66,7 +66,10 @@ body {
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
 	border-width: 5px 5px 0px 5px;
-	
+	position: fixed;
+	z-index: 1000;
+	background-color: #FFFFFF;
+	box-shadow:0px 15px 10px -15px #ccc;
 }
 
 .logo {
